assets/css/screen.css
/* ... */
.comments #ghost-comments-root {
    width: 100%;
    max-width: 720px;
}


/* 7. Author Template
/* ---------------------------------------------------------- */

.author-profile-pic {
    display: block;
    width: 80px;
    height: 80px;
    object-fit: cover;
    margin: 0 0 2rem;
    background: color-mod(var(--color-lightgrey) l(+10%));
    border-radius: 50%;
}

.author-profile-footer {
    margin-top: 16px;
}

.author-profile-location {
    font-weight: 700;
}

.author-profile-meta {
    display: flex;
    gap: 12px;
}

.author-profile-social-link {
    font-size: 1.3rem;
    color: var(--color-secondary-text);
}

.author-profile-social-link:hover {
    color: var(--color-darkgrey);
}

.author-profile-social-link svg {
    width: 16px;
    height: 16px;
}

@media (min-width: 1001px) {
    .author-template .post-card-large .post-card-content:only-child {
        grid-column: span 2;
        max-width: 640px;
    }
}


/* 8. Tag Template
/* ---------------------------------------------------------- */

.tag-template .post-card-large .post-card-image-link {
    grid-column: 2 / span 2;
    order: 2;
}

.tag-template .post-card-large .post-card-content {
    order: 1;
}

@media (min-width: 1001px) {
    .tag-template .post-card-large .post-card-content:only-child {
        grid-column: span 2;
        max-width: 640px;
    }
}

/* 9. Error Template
/* ---------------------------------------------------------- */

.error-content {
    padding: 14vw 4vw 2vw;
}

.error-message {
    padding-bottom: 10vw;
    text-align: center;
}

.error-code {
    margin: 0;
    font-size: 12vw;
    line-height: 1em;
    letter-spacing: -5px;
}

.error-description {
    margin: 0;
    color: var(--color-secondary-text);
    font-size: 3.2rem;
    line-height: 1.3em;
    letter-spacing: -0.005em;
    font-weight: 400;
}

.error-link {
    display: inline-block;
    margin-top: 5px;
}

@media (min-width: 940px) {
    .error-content .post-card {
        margin-bottom: 0;
        padding-bottom: 0;
        border-bottom: none;
    }
}

@media (max-width: 800px) {
    .error-content {
        padding-top: 24vw;
    }
    .error-code {
        font-size: 11.2rem;
    }
    .error-message {
        padding-bottom: 16vw;
    }
    .error-description {
        margin: 5px 0 0 0;
        font-size: 1.8rem;
    }
}

@media (max-width: 500px) {
    .error-content {
        padding-top: 28vw;
    }
    .error-message {
        padding-bottom: 14vw;
    }
}


/* 10. Site Footer
/* ---------------------------------------------------------- */

.site-footer {
    position: relative;
    margin: max(12vmin, 64px) 0 0 0;
    padding-top: 48px;
    padding-bottom: 140px;
    color: #fff;
    background: color-mod(var(--color-darkgrey) l(-5%));
}

.page-template .site-footer {
    margin-top: 0;
}

.site-footer .inner {
    display: grid;
    grid-gap: 40px;
    grid-template-columns: auto 1fr auto;
    color: rgba(255,255,255,0.7);
    font-size: 1.3rem;
}

.site-footer .copyright a {
    color: #fff;
    letter-spacing: -0.015em;
    font-weight: 500;
}

.site-footer a {
    color: rgba(255,255,255,0.7);
}

.site-footer a:hover {
    color: rgba(255,255,255,1);
    text-decoration: none;
}

.site-footer-nav ul {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin: 0 0 20px;
    padding: 0;
    list-style: none;
}

.site-footer-nav li {
    display: inline-flex;
    align-items: center;
    padding: 0;
    margin: 0;
    line-height: 2em;
}

.site-footer-nav a {
    position: relative;
    display: inline-flex;
    align-items: center;
    margin-left: 10px;
}

.site-footer-nav li:not(:first-child) a:before {
    content: "";
    display: block;
    width: 2px;
    height: 2px;
    margin: 0 10px 0 0;
    background: #fff;
    border-radius: 100%;
}

@media (max-width: 767px) {
    .site-footer .inner {
        max-width: 500px;
        grid-template-columns: 1fr;
        grid-gap: 0;
        text-align: center;
    }
    .site-footer .copyright,
    .site-footer .copyright a {
        color: #fff;
        font-size: 1.5rem;
    }
    .site-footer .copyright {
        margin-bottom: 16px;
    }
}


/* 11. Dark Mode
/* ---------------------------------------------------------- */

html.dark-mode body {
    color: rgba(255, 255, 255, 0.75);
    background: var(--color-darkmode);
}

html.dark-mode img {
    opacity: 0.9;
}

html.dark-mode kbd {
    background: color-mod(var(--color-darkmode) l(+5%));
}

html.dark-mode figcaption a {
    color: #fff;
}

html.dark-mode body:not(.has-cover) .gh-head {
    background: var(--color-darkmode);
    color: #fff;
}

html.dark-mode .gh-burger::before,
html.dark-mode .gh-burger::after {
    background-color: #fff;
}

html.dark-mode .site-header-content {
    color: #fff;
}

html.dark-mode .site-header-cover {
    opacity: 1;
}

html.dark-mode .post-card-image {
    background: var(--color-darkmode);
}

html.dark-mode :is(.post-card-tags, .post-card-meta, .article-tag a, .byline-meta-content, .pagination .page-number) {
    color: color-mod(var(--color-secondary-text) l(-22%));
}

html.dark-mode .post-card-featured {
    color: #fff;
}

html.dark-mode .post-card-title {
    color: #fff;
}

html.dark-mode .post-card-excerpt {
    color: var(--color-secondary-text);
}

html.dark-mode .pagination a {
    color: #fff;
}

html.dark-mode .author-profile-location {
    color: #fff;
}

html.dark-mode .author-profile-social-link:hover {
    color: #fff;
}

html.dark-mode .article-title {
    color: #fff;
}

html.dark-mode .article-excerpt {
    color: var(--color-secondary-text);
}

html.dark-mode .post-full-image {
    background-color: color-mod(var(--color-darkmode) l(+8%));
}

html.dark-mode .author-avatar {
    border-color: var(--color-darkmode);
    background-color: color-mod(var(--color-darkmode) l(+8%));
}

html.dark-mode .author-profile-image {
    opacity: 1;
}

html.dark-mode .author-profile-image path {
    fill: var(--color-darkmode);
}
/* ... */

